[package]
name = "yh"
version = "0.1.0"
authors = ["Cody Chau <ooyihaoo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_lib = { path = "../../rCore-kernel/user" }

[profile.release]
debug = true

[features]
board_qemu = []
board_k210 = []